# Giorgia_Modi_Laboratorio

./: CMakeLists.txt  Item.cpp  Item.h  Observer.h  README.md  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  ItemTest.cpp  ObserverTest.cpp  ShoppingListFixture.cpp  ShoppingListTests.cpp  UserFixture.cpp  run_all_tests.cpp
